toList 오류로 Collectors.toList로 변경